# format-calendar

./: .gitignore  150-calendar.yaml  CHANGELOG.md  format-calendar.cabal  insert-calendar  stack.yaml
app/: Main.hs
examples/: CSCI-322-calendar.yaml  CSCI-365-calendar.yaml
