cabal-version:      3.0
name:               format-calendar
version:            0.1.0.0
synopsis:
    Read course calendar information in a simple Yaml format and output as a Markdown table.

-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Brent Yorgey
maintainer:         byorgey@gmail.com
copyright:          2023 Brent Yorgey
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable format-calendar
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base >=4.18.1.0 && < 4.20,
                      yaml ^>= 0.11,
                      aeson >= 2.1 && < 2.3,
                      pandoc-types ^>= 1.23,
                      pandoc ^>= 3.1,
                      time ^>= 1.12,
                      containers >= 0.6 && < 0.8,
                      text >= 2.0 && < 2.2,
                      data-default ^>= 0.7,
                      witch ^>= 1.2
    hs-source-dirs:   app
    default-language: GHC2021
